--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -158,3 +158,15 @@
 .box__button:focus {
 	background-color: #0f3c4b;
 }
+.bg-gradient-primary {
+    background-color: #2d5c88;
+    background-image: linear-gradient(180deg,#2d5c88 10%,#224abe 100%);
+    background-size: cover;
+}
+h5 {
+	
+	font-family: var(--serif-font);
+	font-size: calc(var(--base-font-size)*1.5);
+	font-weight: 300;
+	
+	}
